--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -97,7 +97,8 @@
             <br>
             <br>
             <br>
-            The study is complete, thank you for your participation.
+            <span v-html="session.parameter_set.completion_message"></span>
+            <!-- The study is complete, thank you for your participation. -->
         </div>
     </div>
     
