add current average azm to server display. fixes #159.

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -91,6 +91,9 @@
                                     Zone Minutes Today
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
+                                    Block Average Zone Minutes
+                                </th>
+                                <th scope="col" class = "text-center m-1 p-1">
                                     Wrist Time Today
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
@@ -155,6 +158,9 @@
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
                                     [[p.todays_zone_minutes]]
+                                </td>
+                                <td class="player_table_cell text-nowrap" >
+                                    [[p.todays_average_zone_minutes]]
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
                                     [[p.todays_wrist_minutes]]
