--- a/main/templates/staff/staff_session_parameters.html
+++ b/main/templates/staff/staff_session_parameters.html
@@ -68,14 +68,14 @@
 
 <!-- cards -->
 <div class="row justify-content-lg-center mb-4" v-cloak v-if="session">
-    <div class="col-lg">
+    <div class="col-lg mb-2">
         {%include "staff/staff_session_parameters/general_settings/general_settings_card.html"%}  
     </div>
-    <div class="col-lg">   
+    <div class="col-lg mb-2">   
         {%include "staff/staff_session_parameters/players/players_card.html"%}                  
     </div>          
     
-    <div class="col-lg">
+    <div class="col-lg mb-2">
         {%include "staff/staff_session_parameters/control/control_card.html"%}  
     </div>        
 </div>
