update yesterdays zone minute display

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -95,7 +95,7 @@
                                     Check In Today
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
-                                    Zone Minutes<br>YTD | Today
+                                    Zone Minutes<br>Today|YTD
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Block Average Zone Minutes
@@ -164,7 +164,7 @@
                                     </span>
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
-                                    [[p.yesterdays_zone_minutes]] | [[p.todays_zone_minutes]]
+                                    [[p.todays_zone_minutes]] | [[p.yesterdays_zone_minutes]]
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
                                     [[p.todays_average_zone_minutes]]
