--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -92,7 +92,7 @@
                                     Last Sync
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
-                                    Check In Today
+                                    Check In<br>Today | YTD
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Zone Minutes<br>Today | YTD
@@ -157,6 +157,12 @@
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
                                     <span v-if="p.checked_in_today" style="color: lightgreen;">
+                                        <i class="fas fa-check"></i>
+                                    </span>
+                                    <span v-else style="color: crimson;">
+                                        <i class="fas fa-times"></i>
+                                    </span> | 
+                                    <span v-if="p.checked_in_yesterday" style="color: lightgreen;">
                                         <i class="fas fa-check"></i>
                                     </span>
                                     <span v-else style="color: crimson;">
