so "fitbit connected" message on start screen. fixes #200.

--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -86,7 +86,10 @@
             Please wait for the study to begin.
             <div v-if="session.is_before_first_period">
                 The first day is [[session.start_date]].
-            </div>            
+            </div>   
+            <div v-if="!show_fitbit_connect">
+                Your Fibit is connected.
+            </div>         
         </div>
     </div>
     
