--- a/main/templates/staff/staff_session/control/control_card.html
+++ b/main/templates/staff/staff_session/control/control_card.html
@@ -64,7 +64,7 @@
                                          session.started===false || 
                                          session.is_last_period ||
                                          session.locked">
-                        <span v-if="session.current_period!=session.parameter_set.parameter_set_periods.length">End Early <i class="far fa-hand-paper"></i></span>
+                        <span v-if="session.current_period.period_number!=session.parameter_set.parameter_set_periods.length">End Early <i class="far fa-hand-paper"></i></span>
                         <span v-else>***Final Period***</span>
                 </button>
             </div>
