show end early on or after first day.

--- a/main/templates/staff/staff_session/control/control_card.html
+++ b/main/templates/staff/staff_session/control/control_card.html
@@ -53,7 +53,7 @@
         </div>
 
         <!-- end early -->
-        <div class="row mt-2" v-if="session.started && !session.locked && !session.is_after_last_period">
+        <div class="row mt-2" v-if="session.started && !session.locked && !session.is_after_last_period && session.current_period">
             <div class="col-md text-center">
                 <button type="button"
                         class="btn btn-outline-danger"
