update help text

--- a/main/templates/staff/staff_session/payments/payments_card.html
+++ b/main/templates/staff/staff_session/payments/payments_card.html
@@ -45,7 +45,7 @@
                                 <button type="button"
                                         class="btn btn-outline-primary"
                                         v-on:click = "get_pay_block(r.block_number)"
-                                        title="Copy earnings to clipboard"
+                                        title="Download block earnings."
                                         v-bind:disabled="reconnecting || working || !session.started">
                                         <i class="fas fa-download"></i>
                                 </button>
