add 25th and 75th percentile to staff graph. fixes #218.

--- a/main/templates/staff/staff_session/graph/graph_card.html
+++ b/main/templates/staff/staff_session/graph/graph_card.html
@@ -14,10 +14,21 @@
     <div class="card-body">
         
         <!-- graph -->
-        <div class="row" >
+        <div  class="row">
             <div class="col">
                 <canvas class="graph" id="graph_id"></canvas>
             </div>
-        </div>       
+        </div>    
+        <div class="row mt-4 justify-content-lg-center">
+            <div class="col-auto" style="color:lightgray">
+                25th Percentile
+            </div>
+            <div class="col-auto" style="color:gray">
+                50th Percentile
+            </div>
+            <div class="col-auto" style="color:dimgray">
+                75th Percentile
+            </div>
+        </div>   
     </div>                    
 </div> 
