move csv.writers into context managers. fixes #221.

--- a/main/templates/staff/staff_session/data/data_card.html
+++ b/main/templates/staff/staff_session/data/data_card.html
@@ -69,7 +69,7 @@
                         v-on:click = "downloadActivityData()"
                         title="Download activities"
                         v-bind:disabled="reconnecting || working || session.started==false">
-                    Download activities <i class="fas fa-scroll"></i>
+                    Download Activities <i class="fas fa-scroll"></i>
                 </button>
             </div>
         </div>
