Limit connection re-trys. fixes #223.

--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -91,7 +91,15 @@
             <div class="col text-start">
                 [[session.parameter_set.age_warning]]
             </div>
-        </div>     
+        </div>    
+        <div class="row">
+            <div class="col-7 text-end">
+                {{parameter_set_form.reconnection_limit.label}}:
+            </div>
+            <div class="col text-start">
+                [[session.parameter_set.reconnection_limit]]
+            </div>
+        </div> 
         <div class="row justify-content-center">
             <div class="col-md text-center mb-2 mt-2">
                 <button class="btn btn-outline-primary"
