--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -103,9 +103,14 @@
             </div>
         </div>  
         <div class="row text-end fw-bold" v-if="session_player.survey_link != ''">            
-            <div class="col mt-2">              
+            <div class="col mt-2" v-if="session_player.fitbit_synced_last_30_min">              
                 Complete the survey before check in: <a v-bind:href="session_player.survey_link">Open Survey</a>
-            </div>                                 
+            </div>           
+            <div v-else>
+                <span style="color:red" class="me-2">
+                    Sync your fitbit to your phone and refresh.
+                </span>
+            </div>                      
         </div>
         <div class="row text-end" v-else>            
 
