--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -12,8 +12,13 @@
             target: document.getElementById('id_invitation_subject'),
             height : "400",
             theme: "silver",
-            plugins: "directionality,paste,searchreplace,code",
+            convert_urls: false,
+            promotion: false,
+            auto_focus: 'id_text_html',
+            plugins: "directionality,searchreplace,code,link,image,lists",
+            toolbar: "undo redo | styleselect forecolor bold italic alignleft aligncenter alignright alignjustify outdent indent numlist bullist link code image",
             directionality: "{{ directionality }}",
+            license_key: 'gpl',
         });
 
         // Prevent Bootstrap dialog from blocking focusin
